# communication_skills

./: CHANGELOG.rst  CMakeLists.txt  package.xml
.github/ISSUE_TEMPLATE/: new-skill.md
